assets/css/style.css
/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.26, autoprefixer: v9.7.3) */

@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400&family=Playfair+Display:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&display=swap');

/*-----------------------------------------Global Styles */
* {
    -webkit-box-sizing: border-box;
            box-sizing: border-box;
}

html {
    font-size: 16px;
}

/*-----------------------------------------Headers */

h1 {
    color: #011826;
    text-shadow: 2px 2px #011826;
    font-size: 2.5rem;
}

h2 {
    font-family: 'Playfair Display', serif;
    font-size: 2rem;
    font-style: italic;
    font-weight: 500;
    text-align: center;
    padding-bottom: 20px;
}

h3 {
    font-family: 'Playfair Display', serif;
    font-style: italic;
    text-align: center;
    color: #011826;
    padding-bottom: 30px;
    margin: 0 auto;
    font-size: 1.5rem;
}

footer h6 {
    font-family: 'Playfair Display', serif;
}

p {
    font-family: 'Montserrat', sans-serif;
    font-size: 1rem;
    text-align: center;
}

h2.section-header {
    font-family: 'Playfair Display', serif;
    font-style: italic;
    font-weight: 500;
    text-align: center;
    padding-bottom: 20px;
}

.row {
    padding-top: 20px;
}

/*-------------------------------------------- Navbar */
.navbar {
   font-family: 'Playfair Display', serif;
   font-size: 1rem !important;
   line-height: 1.5;
}

i.fas.fa-infinity {
    color: #69a8a9;
}

i.fas.fa-infinity:hover {
    color: #011826;
}

a.navbar-brand {
    font-family: 'Montserrat', sans-serif;
    letter-spacing: 1.5px;
    text-transform: uppercase;
    text-shadow: 1px 1px #859CA6;
    font-weight: 200;
}

/*-------------------------------------------- Containers */
.content-container {
    padding-top: 75px;
    padding-bottom: 75px;
}

.container-fluid {
    padding: 20px 60px;
    margin: 0 auto;
    overflow: scroll;
}

.container-wrapper-blue {
    background-color: rgba(135, 156, 166, 0.3);
    max-width: 100%;
}

/* Jumbotron */
/* jumbotron syntax and were copied from Code Institute's Whiskey Drop project */
.jumbotron-container {
    height: 100vh;

    background: url('../images/infinityphoto.jpg') no-repeat bottom center fixed;
    background-size: cover;
    
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;

    display: -webkit-box;

    display: -ms-flexbox;

    display: flex;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;

    position: relative;
    overflow: hidden;
}

.jumbotron button {
    font-family: 'Playfair Display', serif;
    font-weight: 500;
    font-style: italic;
    color: #011826;
}

a.btn.btn-info.btn-lg {
    background-color: #69a8a9;
    color: #f2f2f2;
    border-color: #69a8a9;
}

a.btn.btn-info.btn-lg:hover {
    background-color: #f2f2f2;
    color: #69a8a9;
    border-color: #f2f2f2;

}

h1.display-3 {
  font-family: 'Montserrat', sans-serif;
  color: #f2f2f2;
  font-weight: 200;
  text-transform: uppercase;
  letter-spacing: 1.5px;
  text-shadow: 2px 2px #011826;
}

p.lead {
  font-family: 'Playfair Display', serif;
  font-style: italic;
  color: #F2F2F2;
}


/*-------------------------------------------- Jumbotron Overlay */
.jumbotron-overlay {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background-color: rgba(1, 10, 10, .65);
}

/*-------------------------------------------- About */
.about {
    text-align: center;
    padding-bottom: 40px;
}

.about i {
    margin-bottom: 20px;
    font-size: 40px;
    line-height: 45px;
}

.about .btn {
    background-color: white;
    border-color: white;
    border-radius: 15px;
    min-width: 100px;
    font-weight: bold;
    margin-top: 10px;
    color: #69a8a9;
}

.about-content {
     font-family: 'Montserrat', sans-serif;
     font-size: 14px;
     font-weight: 400;
     margin: 0 auto;
     float: none;
}

h4.about-header {
    font-family: 'Playfair Display', serif;
    font-size: 1.2rem;
    font-style: italic;
    font-weight: 500;
    margin: 0 auto;
    padding-bottom: 10px;
}

p.display-4.about-content {
    font-size: 15px;
}

p.text-md-center.font-weight-normal {
    padding: 10px 40px;
}

h3.about-header.text-break.text-align-center {

}

/*-------------------------------------------- Icons */
i.fas.fa-yin-yang.d-sm-block,
i.fas.fa-peace.d-sm-block,
i.fas.fa-heart.d-sm-block,
i.fas.fa-fire-alt.d-sm-block,
i.fas.fa-brain.d-sm-block,
i.fas.fa-praying-hands.d-sm-block {
    color: #69a8a9;
    font-size: 50px;
}

i.fas.fa-yin-yang.d-sm-block:hover,
i.fas.fa-peace.d-sm-block:hover,
i.fas.fa-heart.d-sm-block:hover,
i.fas.fa-fire-alt.d-sm-block:hover,
i.fas.fa-brain.d-sm-block:hover,
i.fas.fa-praying-hands.d-sm-block:hover {
    color: #011826;
    font-size: 50px;
}

/*-------------------------------------------- Schedule */
div.img-thumbnail {
    padding-bottom: 20px;
    border: none;
    margin-bottom: 30px;
    border-radius: 5px;
}

.img-thumbnail img {
    width: 100%;
    height: 100%;
    margin-bottom: 10px;
}

/*-------------------------------------------- Quotes */

#myCarousel {
    font-family: 'Montserrat', sans-serif;
    padding: 5px 40px;
}

div.carousel-inner {
    padding: 20px 20px;
}

div.carousel-item {
    line-height: 1.375em;
    font-weight: 400;
    padding: 20px 20px;
}

i.fas.fa-chevron-left,
i.fas.fa-chevron-right {
    color: #69a8a9;
    font-size: 30px;
}

i.fas.fa-chevron-left:hover,
i.fas.fa-chevron-right:hover {
    color: #011826;
    font-size: 30px;
}

.carousel-indicators li {
    background-color: #011826;
    }

.carousel-indicators li.active {
    background-color: #011826;
}

h3.text-center.quotes {
    padding-top: 20px;
    padding-bottom: 20px;
}

blockquote {
    margin: 0 auto;
    text-align: center;
}

/*-------------------------------------------- Contact */

div.col-12.col-6 {
    -ms-flex-line-pack: center;
        align-content: center;
    margin: 0px auto;
    text-align: left;
}

.embed-responsive.embed-responsive-16by9 {
    -ms-flex-line-pack: center;
        align-content: center;
    margin: 0px auto;
    text-align: center;
}

/*-------------------------------------------- Contact */

section#contact.contact {
    padding-top: 40px;
}

h2.text-center {
    padding-bottom: 0;
}

button.btn.btn-info.float-right {
    background-color: #69a8a9;
    border: #69A8A9;
    font-family: 'Playfair Display', serif;
}

button.btn.btn-info.float-right:hover {
    background-color: #011801;
    border: #011801;
    font-family: 'Playfair Display', serif;
    color: #f2f2f2;
}

/*-------------------------------------------- Footer */
.footer {
    background-color: #f8f9fa;
}

footer i.fas.fa-chevron-up {
    font-size: 30px;
    margin-bottom: 20px;
    color: #69A8A9;
}

footer i.fas.fa-chevron-up:hover {
    font-size: 30px;
    margin-bottom: 10px;
    color: #011826;
}

/*-------------------------------------------- Media Queries */
  @media screen and (max-width: 1024px) {
.jumbotron {
    left: 50%;
    margin-left: auto;
   }
}

/* stack overflow (https://stackoverflow.com/questions/56964388/how-to-fix-font-awesome-icons-not-showing-on-mobile-chrome) */
@media screen and (max-width:600px){
i {
    color: #69a8a9;
    }
}

@media screen and (max-width:600px){
i:hover {
    color: #081826;
    }
}

 @media screen and (max-width: 600px) {
h3.about-header {
    font-family: 'Playfair Display', serif;
    font-style: italic;
    font-weight: 500;
    margin: 0 auto;
    float: none;
}
 }

 @media screen and (max-width:600px) {
     #myCarousel {
    font-family: 'Montserrat', sans-serif;
    overflow: scroll;
}
     }

/* Animations 
copied from https://www.w3schools.com/bootstrap/bootstrap_theme_company.asp */

.slideanim {visibility:hidden;}
.slide {
  animation-name: slide;
  -webkit-animation-name: slide;
  animation-duration: 2s;
  -webkit-animation-duration: 2s;
  /* Make the element visible */
  visibility: visible;
}

@keyframes slide {
  0% {
    opacity: 0;
    transform: translateY(70%);
  }
  100% {
    opacity: 1;
    transform: translateY(0%);
  }
}
@-webkit-keyframes slide {
  0% {
    opacity: 0;
    -webkit-transform: translateY(70%);
  }
  100% {
    opacity: 1;
    -webkit-transform: translateY(0%);
  }
}

/* 404 Error Page 
    Made by Colorlib (https://colorlib.com) */
* {
 -webkit-box-sizing:border-box;
 box-sizing:border-box
}


body {
 padding:0;
 margin:0
}

#notfound {
 position:relative;
 height:100vh;
 background:#030005
}

#notfound .notfound {
 position:absolute;
 left:50%;
 top:50%;
 -webkit-transform:translate(-50%,-50%);
 -ms-transform:translate(-50%,-50%);
 transform:translate(-50%,-50%)
}
.notfound {
 max-width:767px;
 width:100%;
 line-height:1.4;
 text-align:center
}
.notfound .notfound-404 {
 position:relative;
 height:180px;
 margin-bottom:20px;
 z-index:-1
}
.notfound .notfound-404 h1 {
 font-family: 'Montserrat', sans-serif;
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50% , -50%);
      -ms-transform: translate(-50% , -50%);
          transform: translate(-50% , -50%);
  font-size: 224px;
  font-weight: 900;
  margin-top: 0px;
  margin-bottom: 0px;
  margin-left: -12px;
  color: #030005;
  text-transform: uppercase;
  text-shadow: -1px -1px 0px #45d1e8, 1px 1px 0px #ff005a;
  letter-spacing: -20px;
}

.notfound .notfound-404 h2 {
 font-family: 'Montserrat', sans-serif;
 font-style: normal;
 position:absolute;
 left:0;
 right:0;
 top:110px;
 font-size:42px;
 font-weight:700;
 color:#fff;
 text-transform:uppercase;
  text-shadow: 0px 2px 0px #8400ff;
 letter-spacing:13px;
 margin:0;

}
.notfound a {
 font-family: 'Montserrat', sans-serif;
 display:inline-block;
 text-transform:uppercase;
 color: #ff005a;
 text-decoration:none;
 border:2px solid;
 background:0 0;
 padding:10px 40px;
 font-size:14px;
 font-weight:700;
 -webkit-transition:.2s all;
 transition:.2s all
}

.notfound a:hover {
 background-color: #69a8a9;
 color: #011801;
}

@media only screen and (max-width:767px) {
 .notfound .notfound-404 h2 {
  font-size:24px
 }
}
@media only screen and (max-width:480px) {
 .notfound .notfound-404 h1 {
  font-size:182px
 }
}

